Don't track Xcode state

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 iOS/.DS_Store
 iOS/SkyPhotoRobot/Source/.DS_Store
+iOS/SkyPhotoRobot.xcodeproj/project.xcworkspace/xcuserdata/adam.xcuserdatad/UserInterfaceState.xcuserstate
